add UsersList and NewUser views, fix search with filters on books list

--- a/client/src/assets/scss/styles.scss
+++ b/client/src/assets/scss/styles.scss
@@ -9,6 +9,10 @@
 @import 'book';
 @import 'new-book';
 @import 'update-book';
+@import 'users-list';
+@import 'user';
+@import 'new-user';
+@import 'update-user';
 @import 'image-upload';
 @import 'loader';
 @import 'back-drop';
