--- a/client/src/assets/scss/_update-loan.scss
+++ b/client/src/assets/scss/_update-loan.scss
@@ -19,6 +19,18 @@
 	padding-left: 100px;
 }
 
+.form-input-not-allowed {
+	width: 100%;
+	margin: 1.7rem 0;
+}
+
+.update-loan-datepicker {
+	width: 100%;
+	height: 40px;
+	padding-left: 15px;
+	margin-bottom: 1.7rem;
+}
+
 .update-loan-form__btns {
 	display: flex;
 	justify-content: flex-start;
