--- a/client/src/assets/scss/_update-loan.scss
+++ b/client/src/assets/scss/_update-loan.scss
@@ -28,13 +28,12 @@
 	width: 100%;
 	height: 40px;
 	padding-left: 15px;
-	margin-bottom: 1.7rem;
 }
 
 .update-loan-form__btns {
 	display: flex;
 	justify-content: flex-start;
-	margin-bottom: 15px;
+	margin: 1.7rem 0;
 }
 
 .update-loan-form__btn {
