add single loan view, styling it and fixing datepickers

--- a/client/src/assets/scss/_loan.scss
+++ b/client/src/assets/scss/_loan.scss
@@ -51,9 +51,6 @@
 			object-fit: cover;
 		}
 	}
-	.content-item__image {
-		height: 250px;
-	}
 
 	.loan-data__label {
 		min-width: 100px;
@@ -62,5 +59,9 @@
 
 	.loan-data__content-item {
 		font-weight: 600;
+		a {
+			color: $link;
+			text-decoration: none;
+		}
 	}
 }
