--- a/client/src/assets/scss/_variables.scss
+++ b/client/src/assets/scss/_variables.scss
@@ -9,6 +9,7 @@ $success-2: #edfae6;
 $warning: #e6a23c;
 $danger: #f56c6c;
 $error: #f54242;
+$link: #4287f5;
 $info: #909399;
 $dark: #141516;
 $primary-light-1: #ed44a1;
